<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst1"
        android:id="@+id/lightinfo"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst4"
        android:id="@+id/button_light"
        android:onClick="startAktywnosc"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst2"
        android:id="@+id/accelinfo"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst5"
        android:id="@+id/button_accel"
        android:onClick="startAktywnosc"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst11"
        android:id="@+id/tempinfo"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst12"
        android:id="@+id/button_temp"
        android:onClick="startAktywnosc"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst13"
        android:id="@+id/gyroinfo"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst14"
        android:id="@+id/button_gyro"
        android:onClick="startAktywnosc"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst15"
        android:id="@+id/proxinfo"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst16"
        android:id="@+id/button_prox"
        android:onClick="startAktywnosc"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst17"
        android:id="@+id/magninfo"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst18"
        android:id="@+id/button_magn"
        android:onClick="startAktywnosc"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst19"
        android:id="@+id/pressinfo"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst20"
        android:id="@+id/button_press"
        android:onClick="startAktywnosc"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst3"
        android:id="@+id/gpsinfo"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekst6"
        android:id="@+id/button_gps"
        android:onClick="startAktywnosc"
        />




</LinearLayout>
